--- a/StraliSolutions.CSOMSAML.Auth/StraliSolutions.CSOMSAML.Auth.csproj
+++ b/StraliSolutions.CSOMSAML.Auth/StraliSolutions.CSOMSAML.Auth.csproj
@@ -61,6 +61,9 @@
     <None Include="packages.config" />
     <None Include="StraliSolutions.CSOMSAML.Auth.nuspec" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="strali_favicon_dp.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
