--- a/StraliSolutions.CSOMSAML.Auth/StraliSolutions.CSOMSAML.Auth.csproj
+++ b/StraliSolutions.CSOMSAML.Auth/StraliSolutions.CSOMSAML.Auth.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="strali_favicon_dp.ico" />
+    <Content Include="strali_favicon_dp.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
