--- a/StraliSolutions.CSOMSAML.Auth/StraliSolutions.CSOMSAML.Auth.nuspec
+++ b/StraliSolutions.CSOMSAML.Auth/StraliSolutions.CSOMSAML.Auth.nuspec
@@ -10,8 +10,8 @@
     <projectUrl>https://github.com/achildrenmile/StraliSolutions.CSOMSAML.Auth</projectUrl>
     <iconUrl>https://github.com/achildrenmile/StraliSolutions.CSOMSAML.Auth/blob/master/StraliSolutions.CSOMSAML.Auth/strali_favicon_dp.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>The purporse of this library is to create an Authenticated ClientContext in an Claim-based ADFS/SAML environment.</description>
-    <releaseNotes>First Version for </releaseNotes>
+    <description>The purporse of this library is to create an Authenticated ClientContext in a Claim-based SharePoint environment using Active Directoy Federation Services authentication via SAML.</description>
+    <releaseNotes>added support SharePoint Client library dependency</releaseNotes>
     <copyright>Copyright 2018</copyright>
     <tags>SharePoint On-Premises Claims ADFS SAML</tags>
   </metadata>
